--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.magfiads.com"
 documentation: "https://www.magfiads.com"
 versions:
-  - sha: 5f02a788b90ae804f86b04aa24af8937e567874a
-    changeNotes: Initial release.
+  - sha: fa9ea35d13075053fa371b3408765801ad47264a
+    changeNotes: initial released 
